--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 	<h1>Hello World!</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus ab eum tenetur id perspiciatis architecto expedita, eius facilis rem vitae, consectetur! Iure praesentium autem rem perspiciatis facere natus molestiae consequatur.</p>
 	
 </body>
 </html>
